# TaskManager

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
locale/en/LC_MESSAGES/: django.po
locale/ru/LC_MESSAGES/: django.po
main/: forms.py  urls.py  views.py
main/migrations/: 0002_auto_20210315_0507.py  0003_delete_user.py
main/templates/main/: about.html  base.html  index.html  tasks.html
statuses/: apps.py  forms.py  models.py  urls.py  views.py
statuses/migrations/: 0001_initial.py  0002_auto_20210321_0931.py
statuses/templates/statuses/: status_update.html  statuses.html  statuses_create.html
task_manager/: mixins.py  settings.py  urls.py
task_manager/main/migrations/: 0001_initial.py
task_manager/main/templates/main/: about.html  base.html  index.html
tasks/: forms.py  models.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_auto_20210322_0403.py
tasks/templates/tasks/: task_create.html  task_update.html  tasks.html
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20210315_1528.py
users/templates/users/: login.html  register.html  update.html  users.html
